...
        
        if !model.locations.isEmpty {
          Button {
            model.draftNewLocation()
          } label: {
            Label {
              Text("Add New Saved Location")
            } icon: {
              Image(systemName: "plus.circle.fill")
                .foregroundStyle(.green)
            }
          }
        }
...
