...
        .tabItem {
          Text("Saved")
          Image(systemName: "folder")
        }
    }
    .environment(\.openWikipediaWithCoordinates, openURL(coordinates:))
    .alert("Cannot navigate to Wikipedia", isPresented: $isShowingMalformedURLAlert) {
      Button("OK", role: .cancel) {}
    } message: {
      Text("An internal error occurred")
    }
    .alert("Cannot navigate to Wikipedia", isPresented: $isShowingURLNotAcceptedAlert) {
      Button("OK", role: .cancel) {}
...
